--- a/css/admin.css
+++ b/css/admin.css
@@ -11,11 +11,13 @@ h4 { font: normal 10px Tahoma, sans-serif; margin-top: -10px; margin-bottom: 10p
 p { margin-bottom: 10px; }
 
 #credits { text-align:left ; margin-top:0px; color: #ccc; width:100%; background: #303f50; border-top: 1px solid black; }
-#credits p { font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 11px; padding: 5px 0px; width:800px; margin: 0px auto 0px auto; }
+#credits p { font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 11px; padding: 5px 0px; width:940px; margin: 0px auto 0px auto; }
 
 #header { width:100%;overflow:hidden; background: #505f70; /* background: #BBD9EE; */ border-bottom: 1px solid black; }
-#header h1, div#menu {width:800px; margin:0 auto;text-align:left }
+#header h1, div#menu {width:940px; margin:0 auto;text-align:left }
 #header h1 { padding: 30px 0 20px;color: #fff }
+#header h1 a { color: #fff }
+#header h1 a:hover { color: #eee; border-bottom: 0px; }
 
 ul#nav, ul#nav li{ list-style-type:none;margin:0;padding:0 }
 ul#nav { float:right;font-size: 80% }
@@ -32,7 +34,7 @@ ul#nav li.activelink a, ul#nav li.activelink a:hover { background: #FFF; color: 
 #navmenu a.active { color: #fff; background: #999; }
 #navmenu a:hover { color: #fff; background: #BBD9EE; }
 
-#foot { clear: both; width: 800px; padding-top: 10px; margin: 0px auto; font: normal 9px Verdana, Arial, Sans-serif; }
+#foot { clear: both; width: 940px; padding-top: 10px; margin: 0px auto; font: normal 9px Verdana, Arial, Sans-serif; }
 
 .clear {
   clear: both;
@@ -43,7 +45,7 @@ ul#nav li.activelink a, ul#nav li.activelink a:hover { background: #FFF; color: 
      margin: 0 auto 0px auto;
      padding-top: 15px;
      background: #fff;
-	 width: 800px; 
+	 width: 940px; 
 }
 
 #content ul {
@@ -62,7 +64,7 @@ ul#nav li.activelink a, ul#nav li.activelink a:hover { background: #FFF; color: 
 
 #rightcontent {
      float: left;
-     width: 610px;
+     width: 750px;
      padding: 10px;
      background: #eee;
      text-align: left;
@@ -102,9 +104,9 @@ li { list-style-type: none; margin: 0px; padding: 0px;}
 #table2col input.button { font-family: Verdana, Arial, Helvetica, Sans-serif;  padding: 5px; border: 0px; margin: 0; font-weight: bold; font-size: 11px; }
 #table2col td.left { padding: 5px; width: 120px; text-align: right; vertical-align: top;}
 #table2col td.right { background-color:#f3f3fe; font: normal 10px Verdana, Arial, Sans-serif; vertical-align: top; padding: 5px 10px; text-align: left;}
-#table3col td.right h1 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 20px;}
-#table3col td.right h2 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 15px;}
-#table3col td.right h3 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 12px;}
+#table2col td.right h1 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 20px;}
+#table2col td.right h2 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 15px;}
+#table2col td.right h3 { font-family: Verdana, Arial, Helvetica, Sans-serif; color: black; margin: 0px; padding: 0px; font-size: 12px;}
 #table2col td.rightbutton { font: normal 10px Verdana, Arial, Sans-serif; vertical-align: top; padding: 10px 0px 0px 0px; text-align: left;}
 #table2col tr { border: 0px; margin:0px; padding: 0px;} 
 #table2col table { width:100%; border: 0px; margin:0px 0px 10px 0px; padding: 0px;} 
@@ -138,6 +140,8 @@ li { list-style-type: none; margin: 0px; padding: 0px;}
 #table3col tr { border: 0px; margin:0px; padding: 0px;} 
 #table3col table { width:100%; border: 0px; margin:0px 0px 10px 0px; padding: 0px;} 
 #table3col td.right img { max-width: 400px; margin-bottom: 5px;}
+
+#table3col td.right ul li, #table2col td.right ul li { list-style-type: disc; margin-left: 20px; margin-bottom: 5px; line-height: 12px; }
 
 #cpt table {  width: 600px; border: 0px; margin:0px 0px 10px 0px; padding: 0px;} 
 #cpt td.left { border: 5px solid black; padding: 0px; width: 400px; text-align: right }
@@ -175,9 +179,12 @@ span.typed {
 }
 
 hr {
-  margin: 0px;  
+  margin: 7px 0px 10px;  
   padding: 0px;
-  height: 1px;
+  height: 2px;
+  line-height: 2px;
+  background-color: #fff;
+  border: 0px;
 }
 
 a.active {
